Fixed message and chat preview text colors in dark modew

--- a/src/app/core/styles/auth-pages.scss
+++ b/src/app/core/styles/auth-pages.scss
@@ -1,6 +1,6 @@
 :host {
   width: 100dvw;
-  height: 100dvh;
+  height: 100%;
   display: grid;
   place-items: center;
 
