--- a/src/app/pages/main/chat-preview-list/chat-preview/chat-preview.component.scss
+++ b/src/app/pages/main/chat-preview-list/chat-preview/chat-preview.component.scss
@@ -14,6 +14,14 @@
 
   &.selected {
     background-color: var(--primary-300);
+
+    ::ng-deep {
+      .last-updated,
+      .name,
+      .description {
+        color: var(--primary-color-text) !important;
+      }
+    }
   }
 
   &:not(.selected):hover {
