--- a/src/app/pages/main/chat/message/message.component.scss
+++ b/src/app/pages/main/chat/message/message.component.scss
@@ -31,6 +31,7 @@
 
     .message {
       background-color: var(--primary-200);
+      color: var(--primary-color-text);
       text-align: end;
     }
 
