--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 2fr 4fr;
   grid-template-rows: auto 1fr;
-  height: 100dvh;
+  height: 100%;
 
   app-menu-bar,
   .body {
