--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 
 html,
 body {
+  height: 100dvh;
   margin: 0;
   padding: 0;
   color: var(--text-color);
